Truncate excessively long cuisine tags in popups to prevent vendors from abusing this area for slogans.

--- a/css/styles.less
+++ b/css/styles.less
@@ -707,6 +707,13 @@ div.footer-popup {
         height: 20px;
       }
     }
+    .popup-vendor-cuisine {
+      height: 20px;
+      color: #888;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
     h3 {
       margin: 0 0 2px;
       padding: 0;
